--- a/package.json
+++ b/package.json
@@ -1,18 +1,32 @@
 {
   "name": "othello-core",
   "version": "1.0.0",
-  "main": "othello.js",
+  "main": "./src/index.ts",
   "scripts": {
-    "test": "mocha"
+    "build": "npm run build:prod",
+    "build:dev": "webpack --mode=development",
+    "build:prod": "webpack --mode=production",
+    "watch": "webpack --watch",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "Othello core",
   "devDependencies": {
-    "mocha": "^10.7.3"
-  },
-  "dependencies": {
-    "test": "^3.3.0"
+    "@types/jest": "^29.5.12",
+    "@types/node": "^22.5.0",
+    "@types/webpack": "^5.28.5",
+    "@webpack-cli/generators": "^3.0.7",
+    "jest": "^29.7.0",
+    "mocha": "^10.7.3",
+    "prettier": "^3.3.3",
+    "source-map-loader": "^5.0.0",
+    "ts-jest": "^29.2.5",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.5.4",
+    "webpack": "^5.94.0",
+    "webpack-cli": "^5.1.4",
+    "wepack-cli": "^0.0.1-security"
   }
 }
